test/expected/cli/shitbox_misc.out
--- sleep zero ---
rc=0
--- sleep bad duration ---
shit: 1:1: error: Builtin 'shitbox': sleep: invalid duration 'abc'.
     1 |  shitbox sleep abc
       |  ^~~~~~~~~~~~~~~~~ here.
rc=1
--- env runs the command ---
ran
rc=0
--- env applies the assignment ---
SHITBOX_TESTVAR=present
--- pkill with no pattern ---
shit: 1:1: error: Builtin 'shitbox': pkill expects one pattern.
     1 |  shitbox pkill
       |  ^~~~~~~~~~~~~ here.
rc=1
--- pkill with no match ---
rc=1
--- killall with no match ---
shit: 1:1: error: killall: no_such_process_xyz_123: no process found.
     1 |  shitbox killall no_such_process_xyz_123
       |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ here.
rc=1
